--- a/package.json
+++ b/package.json
@@ -2,15 +2,25 @@
   "name": "y",
   "version": "0.0.1",
   "description": "A babel plugin to transform monolithic lodash with modular lodash in apps using commonjs imports",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "node_modules/.bin/jest"
+    "test": "node_modules/.bin/jest",
+    "lint": "node_modules/.bin/eslint ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "jest": "^22.4.3"
+    "eslint": "^4.19.1",
+    "eslint-config-change-fe": "^4.0.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-lodash": "^2.7.0",
+    "eslint-plugin-mocha": "^5.0.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-promise": "^3.7.0",
+    "jest": "^22.4.3",
+    "prettier": "^1.12.1"
   }
 }
