--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "node_modules/.bin/jest",
     "lint": "node_modules/.bin/eslint .",
-    "test-and-lint": "npm run lint && npm test"
+    "lint-and-test": "npm run lint && npm test"
   },
   "author": "",
   "license": "ISC",
