add correct package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "y",
+  "name": "babel-plugin-cjs-modular-lodash",
   "version": "0.0.1",
   "description": "A babel plugin to transform monolithic lodash with modular lodash in apps using commonjs imports",
   "main": "src/index.js",
