--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "eslint": "^4.19.1",
     "eslint-config-change-fe": "^4.0.0",
     "eslint-config-prettier": "^2.9.0",
