--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "eslint-plugin-promise": "^3.7.0",
     "jest": "^22.4.3",
     "prettier": "^1.12.1"
+  },
+  "jest": {
+    "testURL": "http://localhost/"
   }
 }
